# mx-busd-sc

./: .gitignore  Cargo.toml  README.md  compile-wasm.sh  run-tests.sh
src/: lib.rs  storage.rs
tests/erc20/: allowance_CallerCaller.scen.json  allowance_CallerOther.scen.json  allowance_OtherCaller.scen.json  allowance_OtherEqOther.scen.json  allowance_OtherNEqOther.scen.json  approve_Caller-Positive.scen.json  approve_Caller-Zero.scen.json  approve_Other-Positive.scen.json  approve_Other-Zero.scen.json  approve_SwitchCaller.scen.json  balanceOf_Caller.scen.json  balanceOf_NonCaller.scen.json  create.scen.json  not_payable.scen.json  totalSupply_Positive.scen.json  totalSupply_Zero.scen.json  transferFrom_AllDistinct-BalanceEqAllowance.scen.json  transferFrom_AllDistinct-BalanceNEqAllowance.scen.json  transferFrom_AllDistinct-EntireAllowanceMoreThanBalance.scen.json  transferFrom_AllDistinct-EntireBalanceEqAllowance.scen.json  transferFrom_AllDistinct-EntireBalanceMoreThanAllowance.scen.json  transferFrom_AllDistinct-MoreThanAllowanceLessThanBalance.scen.json  transferFrom_AllDistinct-MoreThanBalanceLessThanAllowance.scen.json  transferFrom_AllDistinct-NoOverflow.scen.json  transferFrom_AllDistinct-StillNoOverflow.scen.json  transferFrom_AllEqual-AllowanceRelevant.scen.json  transferFrom_AllEqual-EntireBalance.scen.json  transferFrom_CallerEqFrom-AllowanceRelevant.scen.json  transferFrom_CallerEqFrom-EntireBalance.scen.json  transferFrom_CallerEqFrom-MoreThanBalance.scen.json  transferFrom_CallerEqTo-BalanceNEqAllowance.scen.json  (+26 more)
tests/freeze/: wipe.scen.json  (+7 more)
(+34 files in other folders)
