[package]
name = "sc-busd-rs"
version = "0.2.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "busd"
path = "src/lib.rs"


[dependencies]
elrond-wasm = "0.3.0"
elrond-wasm-node = "0.3.0"
elrond-wasm-derive = "0.3.1"

# elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
# elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }
